# coffeeshop

./: .gitignore  CHALLENGE.md  Makefile  README.md  pyproject.toml  requirements.txt  settings.py
coffeeshop/: cart.py  entities.py  nlp.py  utils.py
coffeeshop/app/: factory.py  service.py
coffeeshop/app/language/: entity.py  enums.py  interfaces.py
coffeeshop/app/language/parser/: en.py
coffeeshop/app/menu/: builder.py  interfaces.py
coffeeshop/domain/: entity.py
coffeeshop/domain/cart/: interfaces.py
coffeeshop/domain/entities/: menu.py  parsed_sentence.py
coffeeshop/domain/language/: dto.py  factory.py  interfaces.py
coffeeshop/domain/language/parser/: en.py
coffeeshop/domain/menu/: builder.py  interfaces.py
coffeeshop/employee/: server.py  service.py
coffeeshop/guest/: client.py
coffeeshop/infrastructure/: client.py  server.py
coffeeshop/infrastructure/cart/: factory.py  memory.py
coffeeshop/infrastructure/file/: reader.py
coffeeshop/infrastructure/language/: dto.py  factory.py
coffeeshop/infrastructure/language/cleaner/: en.py
coffeeshop/infrastructure/language/parser/: en.py
coffeeshop/infrastructure/menu/: builder.py  dto.py  factory.py
data/: sentences.txt
tests/: conftest.py  test_nlp.py
tests/app/: test_service.py
tests/app/language/parser/: test_en.py
tests/app/menu/: test_builder.py
tests/fixtures/data/: expected_1.txt  expected_2.txt  expected_3.txt  sentences_2.txt  sentences_3.txt
tests/infrastructure/language/parser/: test_en.py
tests/infrastructure/menu/: test_builder.py
